--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <section id="container">
         
         <div id="cajita">
-            <input type="text" id="calculos">
+            <input type="text" id="calculos" disabled="disabled">
         </div>
 
         <div id="botones">
